[gd_scene load_steps=4 format=3 uid="uid://hp0oy8dr73cr"]

[ext_resource type="Texture2D" uid="uid://be4jev0rs6bgv" path="res://gamedata/atlas_building.tres" id="1_nikha"]
[ext_resource type="Script" path="res://scene/garage.gd" id="1_t2054"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6tcgj"]
size = Vector2(40, 14)

[node name="garage" type="Sprite2D"]
z_index = 10
script = ExtResource("1_t2054")

[node name="spr" type="Sprite2D" parent="."]
z_as_relative = false
rotation = 1.5708
texture = ExtResource("1_nikha")

[node name="garage_name" type="Label" parent="."]
visible = false
offset_left = -24.0
offset_top = -40.0
offset_right = 16.0
offset_bottom = -17.0
text = "PLACEHOLDER"
horizontal_alignment = 1

[node name="clickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickable_area"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_6tcgj")

[connection signal="mouse_entered" from="clickable_area" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="clickable_area" to="." method="_on_clickable_area_mouse_exited"]
